--- a/src/app/components/map-search-form/search.component.html
+++ b/src/app/components/map-search-form/search.component.html
@@ -3,10 +3,8 @@
         <input mdInput placeholder="Nazwisko" [(ngModel)]=query (keyup)=filter()>
     </md-input-container>
     <div class="suggestions" *ngIf="filteredList.length > 0">
-        <ul>
-            <li *ngFor="let item of filteredList">
-                <a (click)="select(item)">{{item}}</a>
-            </li>
+        <ul *ngFor="let item of filteredList" (click)="select(item)">
+            <li>{{item}}</li>
         </ul>
     </div>
 </div>  
