--- a/src/app/components/side-bar/style.scss
+++ b/src/app/components/side-bar/style.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 aside {
     padding: 10px;
     min-width: 200px;
@@ -5,5 +7,17 @@ aside {
 
 .close {
     position: absolute;
-    right: 20px;
+    right: 10px;
+    color: $primary-color;
+    transition: color 0.3s;
+    cursor: pointer;
+    &:hover {
+        color: $secondary-color;
+    }
+}
+
+.search-form__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
