update to algular4; person-list compoment

--- a/src/app/components/map-search-form/search.component.html
+++ b/src/app/components/map-search-form/search.component.html
@@ -1,4 +1,4 @@
-<div class="on-map search-container">
+<div class="search-container">
     <md-input-container class="search-form">
         <input mdInput placeholder="Nazwisko" [(ngModel)]=query (keyup)=filter()>
     </md-input-container>
