person list design; get on click

--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -1,1 +1,12 @@
-<div>hello from child component</div>
+<div>
+    <div class="person-list" *ngFor="let person of personList" (click)="select(person)">
+        <div class="person-list__name">
+            <span>{{person.surname}}</span>
+            <span>{{person.name}}</span>
+        </div>
+        <div class="person-list__dates">
+            <span class="person-list__dates--birth">{{person.birth}}</span>
+            <span class="person-list__dates--death">{{person.death}}</span>
+        </div>
+    </div>
+</div>
