--- a/src/app/pages/map/map.html
+++ b/src/app/pages/map/map.html
@@ -4,5 +4,8 @@
     </button>
 	<marker></marker>
 	<side-bar></side-bar>
+    <modal id="personsByGrave">
+        <map-popup-content></map-popup-content>
+    </modal>
 </div>
 <div id="map"></div>
